--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.3",
     "express-react-views": "^0.11.0",
-    "mysql2": "^2.1.0"
+    "mysql2": "^2.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
